# advanced_topics_assignment2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile
data_maps/: benchmark_map.npy  five_voxels_y4_pattern.npy  single_voxel_x2_y4_z2.npy  single_voxel_x4_y4_z4.npy  two_full_x_planes_plus_upper_pattern.npy
docs/: HLD.md
docs/examples/: generated.yml  yaml_usage_example.cpp
include/drone_mapper/: ConfigLoader.h  DroneControlImpl.h  IDroneControl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMap3D.h  IMappingAlgorithm.h  IMissionControl.h  IMutableMap3D.h  ISimulation.h  ISimulationRun.h  ISimulationRunFactory.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  ScanResultToVoxels.h  SimulationManager.h  SimulationRunFactory.h  SimulationRunImpl.h  Types.h  Units.h
inputs/: sim_compose.yaml
inputs/drone/: drone_large.yaml  drone_small.yaml
inputs/lidar/: lidar_long.yaml  lidar_short.yaml
inputs/map/: benchmark_map.cw  npy_to_cw.py  scenario_big.cw  scenario_big.npy  scenario_small.cw  scenario_small.npy
inputs/mission/: house_mission_full.yaml  house_mission_lower.yaml  large_mission_out.yaml  large_mission_room.yaml  small_mission_out.yaml  small_mission_room.yaml
inputs/simulation/: house_simulation.yaml  large_simulation_out.yaml  large_simulation_room.yaml  small_simulation_out.yaml  small_simulation_room.yaml
scenarios_2/: sim_compose.yaml
scenarios_2/drone/: assignment1_drone.yaml
scenarios_2/enies_lobby/: map_input.npy
scenarios_2/lidar/: assignment1_lidar.yaml
scenarios_2/mines_of_moria/: map_input.npy
scenarios_2/mission/: enies_lobby.yaml  mines_of_moria.yaml
scenarios_2/new_york/: map_input.npy
scenarios_2/simulation/: enies_lobby.yaml  mines_of_moria.yaml  new_york.yaml
src/comparison/: MapsComparison.cpp  maps_comparison_main.cpp
src/config/: ConfigLoader.cpp
src/drone/: DroneControlImpl.cpp
src/geometry/: VoxelGeometry.h
src/gps/: MockGPS.cpp
src/lidar/: MockLidar.cpp
src/main/: main.cpp
src/map/: Map3DImpl.cpp
(+15 files in other folders)
